@@ -8,8 +8,7 @@ import static com.itemis.jscdlib.SCardLibHandle.SCARD_AUTOALLOCATE;
 import static com.itemis.jscdlib.problem.JScdProblems.SCARD_E_NO_MEMORY;
 import static com.itemis.jscdlib.problem.JScdProblems.SCARD_E_NO_READERS_AVAILABLE;
 import static com.itemis.jscdlib.problem.JScdProblems.SCARD_S_SUCCESS;
-import static java.lang.foreign.MemoryAddress.NULL;
-import static java.lang.foreign.ValueLayout.ADDRESS;
+import static java.lang.foreign.MemorySegment.NULL;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatNoException;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
@@ -42,14 +41,14 @@ import org.mockito.Mockito;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
 import java.lang.foreign.ValueLayout;
 import java.nio.charset.StandardCharsets;
 import java.util.Arrays;
 import java.util.List;
 
-public class SCardLibHandleTest {
+class SCardLibHandleTest {
 
     private static final Logger LOG = LoggerFactory.getLogger(SCardLibHandleTest.class);
 
@@ -61,15 +60,15 @@ public class SCardLibHandleTest {
 
     private SCardMethodInvocations invocations;
     private ScardLibNativeBridge bridgeMock;
-    private MemorySession mySession;
+    private Arena myArena;
 
     private SCardLibHandle underTest;
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         bridgeMock = mock(ScardLibNativeBridge.class);
         invocations = new SCardMethodInvocations();
-        mySession = MemorySession.openConfined();
+        myArena = Arena.openConfined();
 
         setupAllMethodsSuccess();
 
@@ -77,7 +76,7 @@ public class SCardLibHandleTest {
     }
 
     @AfterEach
-    public void tearDown() {
+    void tearDown() {
         if (underTest != null) {
             try {
                 underTest.close();
@@ -86,9 +85,9 @@ public class SCardLibHandleTest {
             }
         }
 
-        if (mySession != null && mySession.isAlive()) {
+        if (myArena != null && myArena.scope().isAlive()) {
             try {
-                mySession.close();
+                myArena.close();
             } catch (Exception e) {
                 LOG.warn("Possible ressource leak. Could not close test memory session.", e);
             }
@@ -96,48 +95,48 @@ public class SCardLibHandleTest {
     }
 
     @Test
-    public void test_handle_is_final() {
+    void test_handle_is_final() {
         FluffyTestHelper.assertFinal(SCardLibHandle.class);
     }
 
     @Test
-    public void test_handle_is_autoclosable() {
+    void test_handle_is_autoclosable() {
         assertThat(AutoCloseable.class).as("JScd handles must be autoclossable").isAssignableFrom(SCardLibHandle.class);
     }
 
     @Test
-    public void test_listReaders_returns_list() {
+    void test_listReaders_returns_list() {
         setupAvailableReaders(READER_ONE);
         assertThat(underTest.listReaders()).as("Method must return a list").isInstanceOf(List.class);
     }
 
     @Test
-    public void test_listReaders_returns_immutable_list() {
+    void test_listReaders_returns_immutable_list() {
         setupAvailableReaders(READER_ONE);
         assertThatThrownBy(() -> underTest.listReaders().add("testString")).as("list of readers must be immutable")
             .isInstanceOf(UnsupportedOperationException.class);
     }
 
     @Test
-    public void when_one_reader_is_available_return_its_name_as_list() {
+    void when_one_reader_is_available_return_its_name_as_list() {
         setupAvailableReaders(READER_ONE);
         assertThat(underTest.listReaders()).containsExactly(READER_ONE);
     }
 
     @Test
-    public void when_multiple_readers_are_available_return_their_names_as_list() {
+    void when_multiple_readers_are_available_return_their_names_as_list() {
         setupAvailableReaders(READER_ONE, READER_TWO);
         assertThat(underTest.listReaders()).containsExactly(READER_ONE, READER_TWO);
     }
 
     @Test
-    public void when_no_readers_are_available_return_empty_list() {
+    void when_no_readers_are_available_return_empty_list() {
         setupAvailableReaders(SCARD_E_NO_READERS_AVAILABLE);
         assertThat(underTest.listReaders()).isEmpty();
     }
 
     @Test
-    public void when_no_readers_are_available_cleanup_correctly() {
+    void when_no_readers_are_available_cleanup_correctly() {
         setupAvailableReaders(SCARD_E_NO_READERS_AVAILABLE);
         underTest.listReaders();
         assertThat(invocations.readerListPtr)
@@ -147,43 +146,43 @@ public class SCardLibHandleTest {
     }
 
     @Test
-    public void when_establish_ctx_fails_skip_cleanup() {
+    void when_establish_ctx_fails_skip_cleanup() {
         establishContextReturns(SCARD_E_NO_MEMORY);
         assertThatThrownBy(() -> underTest.listReaders()).isInstanceOf(JScdException.class);
-        verify(bridgeMock, never()).sCardFreeMemory(nullable(MemoryAddress.class), nullable(MemoryAddress.class));
-        verify(bridgeMock, never()).sCardReleaseContext(nullable(MemoryAddress.class));
+        verify(bridgeMock, never()).sCardFreeMemory(nullable(MemorySegment.class), nullable(MemorySegment.class));
+        verify(bridgeMock, never()).sCardReleaseContext(nullable(MemorySegment.class));
     }
 
     @Test
-    public void when_establish_listReaders_fails_skip_freeMem() {
+    void when_establish_listReaders_fails_skip_freeMem() {
         setupAvailableReaders(SCARD_E_NO_MEMORY);
         assertThatThrownBy(() -> underTest.listReaders()).isInstanceOf(JScdException.class);
-        verify(bridgeMock, never()).sCardFreeMemory(nullable(MemoryAddress.class), nullable(MemoryAddress.class));
-        verify(bridgeMock).sCardReleaseContext(any(MemoryAddress.class));
+        verify(bridgeMock, never()).sCardFreeMemory(nullable(MemorySegment.class), nullable(MemorySegment.class));
+        verify(bridgeMock).sCardReleaseContext(any(MemorySegment.class));
     }
 
     /**
-     * We cannot test against a real winscard.dll. Thus, we must make sure, the calls are correct
-     * and in expected order.
+     * We cannot test against a real winscard.dll. Thus, we must make sure, the correct calls are
+     * made in expected order.
      */
     @Test
-    public void list_readers_happy_path_runs_expected_calls() {
+    void list_readers_happy_path_runs_expected_calls() {
         setupAvailableReaders(READER_ONE);
 
         assertThatNoException().isThrownBy(() -> underTest.listReaders());
 
         var inOrder = inOrder(bridgeMock);
         inOrder.verify(bridgeMock).sCardEstablishContext(eq(PCSC_SCOPE_SYSTEM), same(NULL), same(NULL),
-            any(MemoryAddress.class));
+            any(MemorySegment.class));
         inOrder.verify(bridgeMock)
-            .sCardListReaders(eq(invocations.hContext), eq(SCARD_ALL_READERS), any(MemoryAddress.class),
-                any(MemoryAddress.class));
+            .sCardListReaders(eq(invocations.hContext), eq(SCARD_ALL_READERS), any(MemorySegment.class),
+                any(MemorySegment.class));
         inOrder.verify(bridgeMock).sCardFreeMemory(eq(invocations.hContext), eq(invocations.readerListPtr));
         inOrder.verify(bridgeMock).sCardReleaseContext(eq(invocations.hContext));
     }
 
     @Test
-    public void list_readers_throws_jscdException_if_establish_context_fails() {
+    void list_readers_throws_jscdException_if_establish_context_fails() {
         var expectedProblem = SCARD_E_NO_MEMORY;
         establishContextReturns(expectedProblem);
         assertThatThrownBy(() -> underTest.listReaders())
@@ -193,7 +192,7 @@ public class SCardLibHandleTest {
     }
 
     @Test
-    public void list_readers_throws_jscdException_if_scardListReaders_fails() {
+    void list_readers_throws_jscdException_if_scardListReaders_fails() {
         var expectedProblem = SCARD_E_NO_MEMORY;
         setupAvailableReaders(expectedProblem);
         assertThatThrownBy(() -> underTest.listReaders())
@@ -203,7 +202,7 @@ public class SCardLibHandleTest {
     }
 
     @Test
-    public void list_readers_throws_jscdException_if_an_unknown_error_code_is_encountered() {
+    void list_readers_throws_jscdException_if_an_unknown_error_code_is_encountered() {
         var errorWithUnknownErrorCode = new JScdProblem() {
 
             @Override
@@ -229,7 +228,7 @@ public class SCardLibHandleTest {
     }
 
     @Test
-    public void errors_during_free_mem_are_logged_no_exception_is_thrown() {
+    void errors_during_free_mem_are_logged_no_exception_is_thrown() {
         var expectedProblem = SCARD_E_NO_MEMORY;
         freeMemReturns(expectedProblem);
 
@@ -241,7 +240,7 @@ public class SCardLibHandleTest {
     }
 
     @Test
-    public void errors_during_release_ctx_are_logged_no_exception_is_thrown() {
+    void errors_during_release_ctx_are_logged_no_exception_is_thrown() {
         var expectedProblem = SCARD_E_NO_MEMORY;
         releaseCtxReturns(expectedProblem);
 
@@ -258,8 +257,8 @@ public class SCardLibHandleTest {
         // https://github.com/eclipse-jdt/eclipse.jdt.core/issues/456
         Mockito.mock(Object.class);
 
-        when(bridgeMock.sCardEstablishContext(anyLong(), any(MemoryAddress.class), any(MemoryAddress.class),
-            any(MemoryAddress.class)))
+        when(bridgeMock.sCardEstablishContext(anyLong(), any(MemorySegment.class), any(MemorySegment.class),
+            any(MemorySegment.class)))
                 .thenReturn(expectedProblem.errorCode());
     }
 
@@ -268,7 +267,7 @@ public class SCardLibHandleTest {
         // https://github.com/eclipse-jdt/eclipse.jdt.core/issues/456
         Mockito.mock(Object.class);
 
-        when(bridgeMock.sCardFreeMemory(any(MemoryAddress.class), any(MemoryAddress.class)))
+        when(bridgeMock.sCardFreeMemory(any(MemorySegment.class), any(MemorySegment.class)))
             .thenReturn(expectedProblem.errorCode());
     }
 
@@ -277,7 +276,7 @@ public class SCardLibHandleTest {
         // https://github.com/eclipse-jdt/eclipse.jdt.core/issues/456
         Mockito.mock(Object.class);
 
-        when(bridgeMock.sCardReleaseContext(any(MemoryAddress.class))).thenReturn(expectedProblem.errorCode());
+        when(bridgeMock.sCardReleaseContext(any(MemorySegment.class))).thenReturn(expectedProblem.errorCode());
     }
 
     private void setupAllMethodsSuccess() {
@@ -285,11 +284,14 @@ public class SCardLibHandleTest {
         // https://github.com/eclipse-jdt/eclipse.jdt.core/issues/456
         Mockito.mock(Object.class);
 
-        when(bridgeMock.sCardEstablishContext(anyLong(), any(MemoryAddress.class), any(MemoryAddress.class),
-            any(MemoryAddress.class)))
+        when(bridgeMock.sCardEstablishContext(anyLong(), any(MemorySegment.class), any(MemorySegment.class),
+            any(MemorySegment.class)))
                 .thenAnswer(invocation -> {
-                    var ctx = segment().of("sCardCtx lives here").allocate(mySession);
-                    invocation.getArgument(3, MemoryAddress.class).set(ADDRESS, 0, ctx.address());
+                    var ctx = segment().of("sCardCtx lives here").allocate(myArena.scope());
+                    var ctxPtr = invocation.getArgument(3, MemorySegment.class);
+                    var ctxPtrSeg =
+                        MemorySegment.ofAddress(ctxPtr.address(), ValueLayout.ADDRESS.asUnbounded().byteSize());
+                    ctxPtrSeg.set(ValueLayout.ADDRESS.asUnbounded(), 0, ctx.address());
                     invocations.hContext = ctx.address();
                     return SCARD_S_SUCCESS.errorCode();
                 });
@@ -304,10 +306,10 @@ public class SCardLibHandleTest {
         // https://github.com/eclipse-jdt/eclipse.jdt.core/issues/456
         Mockito.mock(Object.class);
 
-        when(bridgeMock.sCardListReaders(any(MemoryAddress.class), any(MemoryAddress.class), any(MemoryAddress.class),
-            any(MemoryAddress.class))).then(invocation -> {
-                var addrOfReaderListPtr = invocation.getArgument(2, MemoryAddress.class);
-                var addrOfReaderListLength = invocation.getArgument(3, MemoryAddress.class);
+        when(bridgeMock.sCardListReaders(any(MemorySegment.class), any(MemorySegment.class), any(MemorySegment.class),
+            any(MemorySegment.class))).then(invocation -> {
+                var addrOfReaderListPtr = invocation.getArgument(2, MemorySegment.class);
+                var addrOfReaderListLength = invocation.getArgument(3, MemorySegment.class);
 
                 var readerListMultiStringBuilder = new StringBuilder("");
                 Arrays.stream(readerNames).forEach(reader -> {
@@ -316,14 +318,18 @@ public class SCardLibHandleTest {
                 });
                 readerListMultiStringBuilder.append('\0');
                 var readerListMultiString = readerListMultiStringBuilder.toString();
-                var readerList = new StringSegment(readerListMultiString, mySession);
+                var readerList = new StringSegment(readerListMultiString, myArena.scope());
 
-                addrOfReaderListPtr.set(ADDRESS, 0, readerList.address());
-
-                var r = FluffyMemory.pointer().to(addrOfReaderListLength).as(Integer.class).allocate(mySession);
+                var addrOfReaderList = MemorySegment.ofAddress(addrOfReaderListPtr.address(),
+                    ValueLayout.ADDRESS.asUnbounded().byteSize());
+                addrOfReaderList.set(ValueLayout.ADDRESS.asUnbounded(), 0, readerList.address());
+                var r = FluffyMemory.pointer().to(addrOfReaderListLength.address()).as(Integer.class)
+                    .allocate(myArena.scope());
                 assertThat(r.dereference()).as("Provided reader list length must be unset.")
                     .isEqualTo(SCARD_AUTOALLOCATE);
-                addrOfReaderListLength.set(ValueLayout.JAVA_INT, 0,
+                var readerListLengthSeg = MemorySegment.ofAddress(addrOfReaderListLength.address(),
+                    ValueLayout.ADDRESS.asUnbounded().byteSize());
+                readerListLengthSeg.set(ValueLayout.JAVA_INT, 0,
                     readerListMultiString.getBytes(StandardCharsets.UTF_8).length);
 
                 invocations.readerListPtr = readerList.address();
@@ -336,7 +342,7 @@ public class SCardLibHandleTest {
     }
 
     private static final class SCardMethodInvocations {
-        MemoryAddress hContext = null;
-        MemoryAddress readerListPtr = null;
+        MemorySegment hContext = null;
+        MemorySegment readerListPtr = null;
     }
 }
