@@ -7,7 +7,6 @@ import static com.itemis.fluffyj.tests.FluffyTestHelper.assertNullArgNotAccepted
 import static com.itemis.fluffyj.tests.exceptions.ExpectedExceptions.EXPECTED_CHECKED_EXCEPTION;
 import static com.itemis.jscdlib.ScDaemonHandle.ASSUAN_INVALID_PID;
 import static com.itemis.jscdlib.ScDaemonHandle.ASSUAN_SOCKET_CONNECT_FDPASSING;
-import static java.lang.foreign.ValueLayout.ADDRESS;
 import static org.assertj.core.api.Assertions.assertThat;
 import static org.assertj.core.api.Assertions.assertThatThrownBy;
 import static org.junit.jupiter.api.Assertions.assertDoesNotThrow;
@@ -32,11 +31,12 @@ import org.mockito.Mockito;
 import org.mockito.stubbing.Answer;
 import org.mockito.stubbing.Stubber;
 
-import java.lang.foreign.MemoryAddress;
-import java.lang.foreign.MemorySession;
+import java.lang.foreign.Arena;
+import java.lang.foreign.MemorySegment;
+import java.lang.foreign.ValueLayout;
 import java.nio.file.Paths;
 
-public class ScDaemonHandleTest {
+class ScDaemonHandleTest {
 
     private static final Answer<Long> SUCCESS = invocation -> JScdProblems.SCARD_S_SUCCESS.errorCode();
 
@@ -46,16 +46,16 @@ public class ScDaemonHandleTest {
     private ScDaemonNativeBridge bridgeMock;
     private JScdEnvSocketDiscovery socketDiscoveryMock;
     private AssuanMethodInvocations invocations;
-    private MemorySession testMemorySession;
+    private Arena testArena;
 
     private ScDaemonHandle underTest;
 
     @BeforeEach
-    public void setUp() {
+    void setUp() {
         bridgeMock = mock(ScDaemonNativeBridge.class);
         socketDiscoveryMock = mock(JScdEnvSocketDiscovery.class);
         invocations = new AssuanMethodInvocations();
-        testMemorySession = MemorySession.openConfined();
+        testArena = Arena.openConfined();
 
         when(socketDiscoveryMock.discover()).thenReturn(Paths.get("scdaemon.socket.file"));
 
@@ -65,31 +65,31 @@ public class ScDaemonHandleTest {
 
         underTest = constructUnderTest();
 
-        verify(bridgeMock).assuanNew(any(MemoryAddress.class));
-        verify(bridgeMock).assuanSocketConnect(eq(invocations.ctx), any(MemoryAddress.class),
+        verify(bridgeMock).assuanNew(any(MemorySegment.class));
+        verify(bridgeMock).assuanSocketConnect(eq(invocations.ctx), any(MemorySegment.class),
             eq(ASSUAN_INVALID_PID),
             eq(ASSUAN_SOCKET_CONNECT_FDPASSING));
     }
 
     @AfterEach
-    public void tearDown() {
+    void tearDown() {
         if (underTest != null) {
             underTest.close();
         }
     }
 
     @Test
-    public void constructorDoesNotAcceptNullAsNativeBridge() {
+    void constructorDoesNotAcceptNullAsNativeBridge() {
         assertNullArgNotAccepted(() -> new ScDaemonHandle(null, socketDiscoveryMock), "bridge");
     }
 
     @Test
-    public void constructorDoesNotAcceptNullAsSocketDiscovery() {
+    void constructorDoesNotAcceptNullAsSocketDiscovery() {
         assertNullArgNotAccepted(() -> new ScDaemonHandle(bridgeMock, null), "socketDiscovery");
     }
 
     @Test
-    public void close_calls_release_correctly() {
+    void close_calls_release_correctly() {
         try (var l = constructUnderTest()) {
 
         } finally {
@@ -98,7 +98,7 @@ public class ScDaemonHandleTest {
     }
 
     @Test
-    public void constructor_throws_jscdException_if_assuan_new_fails() {
+    void constructor_throws_jscdException_if_assuan_new_fails() {
         var expectedProblem = JScdProblems.SCARD_E_NO_MEMORY;
 
         assuanNewReturns(invocation -> expectedProblem.errorCode());
@@ -113,7 +113,7 @@ public class ScDaemonHandleTest {
     }
 
     @Test
-    public void constructor_throws_jscdException_if_socket_connect_fails() {
+    void constructor_throws_jscdException_if_socket_connect_fails() {
         var expectedProblem = JScdProblems.SCARD_E_NO_MEMORY;
 
         assuanSocketConnectReturns(invocation -> expectedProblem.errorCode());
@@ -128,19 +128,19 @@ public class ScDaemonHandleTest {
     }
 
     @Test
-    public void sendCommand_happyPath() {
+    void sendCommand_happyPath() {
         var expectedCommand = "SERIALNO";
 
         underTest.sendCommand(expectedCommand, line -> System.out.println(line), line -> System.out.println(line));
 
-        verify(bridgeMock).assuanTransact(eq(invocations.ctx), any(MemoryAddress.class), any(MemoryAddress.class),
-            eq(MemoryAddress.NULL),
-            any(MemoryAddress.class), eq(MemoryAddress.NULL), any(MemoryAddress.class), eq(MemoryAddress.NULL));
+        verify(bridgeMock).assuanTransact(eq(invocations.ctx), any(MemorySegment.class), any(MemorySegment.class),
+            eq(MemorySegment.NULL),
+            any(MemorySegment.class), eq(MemorySegment.NULL), any(MemorySegment.class), eq(MemorySegment.NULL));
         assertThat(invocations.command).as("Unexpected command").isEqualTo(expectedCommand);
     }
 
     @Test
-    public void send_command_throws_jscdException_if_transact_fails() {
+    void send_command_throws_jscdException_if_transact_fails() {
         var expectedProblem = JScdProblems.SCARD_E_NO_MEMORY;
 
         assuanTransactReturns(invocation -> expectedProblem.errorCode());
@@ -152,7 +152,7 @@ public class ScDaemonHandleTest {
     }
 
     @Test
-    public void errors_during_release_ctx_are_logged_no_exception_is_thrown() {
+    void errors_during_release_ctx_are_logged_no_exception_is_thrown() {
         assuanReleaseReturns(invocation -> {
             throw EXPECTED_CHECKED_EXCEPTION;
         });
@@ -165,17 +165,17 @@ public class ScDaemonHandleTest {
     }
 
     @Test
-    public void calling_close_twice_does_not_call_release_twice() {
+    void calling_close_twice_does_not_call_release_twice() {
         assertDoesNotThrow(() -> {
             underTest.close();
             underTest.close();
         });
 
-        verify(bridgeMock).assuanRelease(any(MemoryAddress.class));
+        verify(bridgeMock).assuanRelease(any(MemorySegment.class));
     }
 
     private static final class AssuanMethodInvocations {
-        MemoryAddress ctx = null;
+        MemorySegment ctx = null;
         String command = null;
     }
 
@@ -184,10 +184,12 @@ public class ScDaemonHandleTest {
         // https://github.com/eclipse-jdt/eclipse.jdt.core/issues/456
         Mockito.mock(Object.class);
 
-        when(bridgeMock.assuanNew(any(MemoryAddress.class))).thenAnswer(invocation -> {
-            var ctxPtrSegPtr = invocation.getArgument(0, MemoryAddress.class);
-            var ctxSeg = segment().of("Assuan ctx lives here").allocate(testMemorySession);
-            ctxPtrSegPtr.set(ADDRESS, 0, ctxSeg.address());
+        when(bridgeMock.assuanNew(any(MemorySegment.class))).thenAnswer(invocation -> {
+            var ctxPtrSegPtr = invocation.getArgument(0, MemorySegment.class);
+            var ctxSeg = segment().of("Assuan ctx lives here").allocate(testArena.scope());
+            var ctxPtrSeg =
+                MemorySegment.ofAddress(ctxPtrSegPtr.address(), ValueLayout.ADDRESS.asUnbounded().byteSize());
+            ctxPtrSeg.set(ValueLayout.ADDRESS.asUnbounded(), 0, ctxSeg.address());
             invocations.ctx = ctxSeg.address();
             return answer.answer(invocation);
         });
@@ -198,7 +200,7 @@ public class ScDaemonHandleTest {
         // https://github.com/eclipse-jdt/eclipse.jdt.core/issues/456
         Mockito.mock(Object.class);
 
-        when(bridgeMock.assuanSocketConnect(any(MemoryAddress.class), any(MemoryAddress.class), eq(ASSUAN_INVALID_PID),
+        when(bridgeMock.assuanSocketConnect(any(MemorySegment.class), any(MemorySegment.class), eq(ASSUAN_INVALID_PID),
             eq(ASSUAN_SOCKET_CONNECT_FDPASSING)))
                 .thenAnswer(answer);
     }
@@ -208,11 +210,11 @@ public class ScDaemonHandleTest {
         // https://github.com/eclipse-jdt/eclipse.jdt.core/issues/456
         Mockito.mock(Object.class);
 
-        when(bridgeMock.assuanTransact(any(MemoryAddress.class), any(MemoryAddress.class), any(MemoryAddress.class),
-            any(MemoryAddress.class),
-            any(MemoryAddress.class), any(MemoryAddress.class), any(MemoryAddress.class), any(MemoryAddress.class)))
+        when(bridgeMock.assuanTransact(any(MemorySegment.class), any(MemorySegment.class), any(MemorySegment.class),
+            any(MemorySegment.class),
+            any(MemorySegment.class), any(MemorySegment.class), any(MemorySegment.class), any(MemorySegment.class)))
                 .thenAnswer(invocation -> {
-                    invocations.command = invocation.getArgument(1, MemoryAddress.class).getUtf8String(0);
+                    invocations.command = invocation.getArgument(1, MemorySegment.class).getUtf8String(0);
                     return answer.answer(invocation);
                 });
     }
@@ -223,7 +225,7 @@ public class ScDaemonHandleTest {
         var stubber = Mockito.doAnswer(answer);
         try {
             var whenMethod = Stubber.class.getMethod("when", Object.class);
-            ((ScDaemonNativeBridge) whenMethod.invoke(stubber, bridgeMock)).assuanRelease(any(MemoryAddress.class));
+            ((ScDaemonNativeBridge) whenMethod.invoke(stubber, bridgeMock)).assuanRelease(any(MemorySegment.class));
         } catch (Exception e) {
             Assertions.fail("Could not mock call.", e);
         }
